# skill-chrome-log

./: .gitignore  CLAUDE.md  README.md  SKILL.md  llms.txt  pyproject.toml  requirements.txt
.arc/: items.jsonl
.beads/: daemon-error  issues.jsonl
assets/: status.html
launchagent/: local.chrome-log.plist
references/: CDP_PATTERNS.md  DRIVE_VIDEO_SUMMARY_API.md  DRIVE_VIDEO_SUMMARY_HOWTO.md  WEBCTL_INTEGRATION.md
scripts/: __init__.py  chrome-debug.sh  chrome_log.py  daemon.py  install.sh  server.py
