[project]
name = "skill-chrome-log"
version = "0.1.0"
description = "Chrome network request logger for reverse-engineering APIs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
]

[project.scripts]
chrome-log = "scripts.chrome_log:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.uv]
dev-dependencies = []
